# prisma-plus-plus

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: task-form.yaml  user-story-form.yaml
.github/workflows/: add-issue-to-project.yaml  ci.yml  manual-deployment.yml  pull-request-template.md
Dokumentation/Anleitungen/: .Setup_Environment.md.swp  Branch management.md  Setup_Environment.md
Dokumentation/Renderer/: Klassendiagramm.uxf
Dokumentation/UML/: Scene.uxf  Sequence_Diagram_Raytracer.uxf
Dokumentation/Zeiterfassung/: Zeiterfassung_Jan.xls  Zeiterfassung_Peter.xls
Projektplanung/Zeiterfassung/: Zeiterfassung.xlsx  Zeiterfassung_Dennis.xls
Software/Produkt/: .clang-format  .clang-format-include  .clang-format.yml  .clang-tidy  CMakeLists.txt  CMakePresets.json  build_unix.sh  build_windows.ps1  run_clang_tidy.ps1  run_clang_tidy.sh
Software/Produkt/include/: ComponentList.hpp  Hit.hpp  HitComponent.hpp  Light.hpp  Material.hpp  Object.hpp  Primitive.hpp  Ray.hpp  RayTracer.hpp  Scene.hpp  Triangle.hpp  UUIDGenerator.hpp  raytracing.hpp
Software/Produkt/include/cli/: CliArguments.h  CliManager.h
Software/Produkt/include/core/: Camera.hpp  Color.hpp  Component.hpp  Hit.hpp  HitComponent.hpp  HitComponentList.hpp  HitComponentOctree.hpp  Light.hpp  Material.hpp  Object.hpp  PerspectiveCamera.hpp  PointLight.hpp  Primitive.hpp  PrimitiveList.hpp  Ray.hpp  RayTracer.hpp  RayTracingRunner.hpp  Resolution.h  Resolution.hpp  Scene.hpp  Subray.h  Subray.hpp  Triangle.hpp  Vertex.hpp  glm_json.hpp
Software/Produkt/include/ui/: HierarchySidebar.h  MenuBar.h  ScenePreview.h  SettingsSidebar.h  UIManager.h
Software/Produkt/src/: Camera.cpp  ComponentList.cpp  Ray.cpp  RayTracer.cpp  Triangle.cpp  firstcode.cpp  main.cpp  raytracing.cpp  raytracing.hpp
Software/Produkt/src/cli/: CliArguments.cpp  CliManager.cpp
Software/Produkt/src/core/: Camera.cpp  HitComponent.cpp  HitComponentList.cpp  HitComponentOctree.cpp  Object.cpp  PerspectiveCamera.cpp  PointLight.cpp  Primitive.cpp  Ray.cpp  RayTracer.cpp  RayTracingRunner.cpp  Scene.cpp  Subray.cpp  Triangle.cpp
Software/Produkt/src/ui/: HierarchySidebar.cpp  MenuBar.cpp  ScenePreview.cpp  SettingsSidebar.cpp  UIManager.cpp
Software/Produkt/tests/: TestHelper.hpp  test_cli.cpp  test_firstcode.cpp
Software/Produkt/tests/core/: PointLight.cpp  test_HitComponent.cpp  test_HitComponentList.cpp  test_Object.cpp  test_PointLight.cpp  test_Scene.cpp  test_Triangle.cpp  test_Vertex.cpp
src/: main.cpp
